server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-49.snap
---
source: main-api/src/search/search_executor/mod.rs
description: "H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
expression: actual
info: H.03 should get 2910.EG.003
---
- facet: rooms
  entries:
    - id: 5212.01.030
      type: room
      name: "5212.01.\u001903\u00170 ( Gemeinschaftsraum)"
      subtext: "garching, RCM Radiochemie München"
      subtext_bold: H.1.030@5212
    - id: 5212.02.030
      type: room
      name: "5212.02.\u001903\u00170 ( Gemeinschaftsraum)"
      subtext: "garching, RCM Radiochemie München"
      subtext_bold: H.2.030@5212
    - id: 2910.EG.031
      type: room
      name: "2910.EG.\u001903\u00171 ( WC-Herren)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.031@2910
      parsed_id: "\u0019H.03\u00171 RiWa 1 (HfP/GOV)"
    - id: 2910.EG.032
      type: room
      name: "2910.EG.\u001903\u00172 ( Beh.-WC)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.032@2910
      parsed_id: "\u0019H.03\u00172 RiWa 1 (HfP/GOV)"
    - id: 0504.03.430
      type: room
      name: "0504.\u001903\u0017.430 ( WC-\u0019H\u0017)"
      subtext: "stammgelände, Landwirtschaftsbau (Z4)"
      subtext_bold: 3430@0504
    - id: 0505.03.522
      type: room
      name: "0505.\u001903\u0017.522 ( WC-\u0019H\u0017)"
      subtext: "stammgelände, Wirtschaftswissenschaften (Z5)"
      subtext_bold: 3522@0505
    - id: 0505.03.526A
      type: room
      name: "0505.\u001903\u0017.526A ( WC-\u0019H\u0017)"
      subtext: "stammgelände, Wirtschaftswissenschaften (Z5)"
      subtext_bold: 3526@0505
    - id: 0501.03.135
      type: room
      name: "0501.\u001903\u0017.135 ( Vorraum WC-\u0019H\u0017)"
      subtext: "stammgelände, Hauptgebäude (Z1)"
      subtext_bold: 3135@0501
    - id: 0501.03.135B
      type: room
      name: "0501.\u001903\u0017.135B ( Toilette WC-\u0019H\u0017)"
      subtext: "stammgelände, Hauptgebäude (Z1)"
      subtext_bold: 3135B@0501
    - id: 0501.03.153A
      type: room
      name: "0501.\u001903\u0017.153A ( Vorraum WC-\u0019H\u0017)"
      subtext: "stammgelände, Hauptgebäude (Z1)"
      subtext_bold: 3153A@0501
  n_visible: 10
  estimatedTotalHits: 412
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 1
